[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/asteroid.gd" type="Script" id=1]

[node name="asteroid" type="KinematicBody2D"]
position = Vector2( 557, 306 )
collision_layer = 2
collision_mask = 17
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )

[node name="asteroid_collider" type="CollisionShape2D" parent="."]

[node name="size_label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "size"

[node name="life_label" type="Label" parent="."]
margin_left = -2.0
margin_top = -28.0
margin_right = 38.0
margin_bottom = -14.0
text = "life"
